--- a/src/AppBundle/Resources/views/security/change_password.html.twig
+++ b/src/AppBundle/Resources/views/security/change_password.html.twig
@@ -1,8 +1,14 @@
 {% extends '@basic/base.html.twig' %}
 
 {% block body %}
-    <h2>Change password</h2>
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-    {{ form_end(form) }}
+    <div class="span9">
+        <h2>Change password</h2>
+
+        <div class="well">
+
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+        {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
