--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -7,21 +7,33 @@
 
 
     <link rel="shortcut icon" href="{{ asset('themes/images/ico/favicon.ico') }}">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    -->
+    <!-- Bootstrap style -->
+    <link id="callCss" rel="stylesheet" href="{{ asset('themes/bootshop/bootstrap.min.css') }}" media="screen"/>
+    <link href="{{ asset('themes/css/base.css') }}" rel="stylesheet" media="screen"/>
+    <!-- Bootstrap style responsive -->
+    <link href="{{ asset('themes/css/bootstrap-responsive.min.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('themes/css/font-awesome.css') }}" rel="stylesheet" type="text/css">
+    <!-- Google-code-prettify -->
+    <link href="{{ asset('themes/js/google-code-prettify/prettify.css') }}" rel="stylesheet"/>
+    <!-- fav and touch icons -->
+    <link rel="shortcut icon" href="{{ asset('themes/images/ico/favicon.ico') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('themes/images/ico/apple-touch-icon-144-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('themes/images/ico/apple-touch-icon-114-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('themes/images/ico/apple-touch-icon-72-precomposed.png') }}">
+    <link rel="apple-touch-icon-precomposed" href="{{ asset('themes/images/ico/apple-touch-icon-57-precomposed.png') }}">
+    <style type="text/css" id="enject"></style>
 </head>
 <body>
 <div class="container">
-    {% if app.session.get('cart') is defined %}
-         <p>{{ dump(app.session.get('cart')) }}</p>
-    {% endif %}
 </div>
 <div id="header">
     <div class="container">
         <div id="welcomeLine" class="row">
-            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-            <div class="span6">Welcome!<strong> {{ app.user.username }}</strong></div>
-            {% endif %}
+            <div class="span6">
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    Welcome!<strong> {{ app.user.username }}</strong>
+                {% endif %}
+            </div>
             <div class="span6">
                 <div class="pull-right">
 
@@ -48,22 +60,23 @@
                 <a class="brand" href="{{ path('home_page') }}"><img src="{{ asset('themes/images/logo.png') }}" alt="Bootsshop"/></a>
 
                 <ul id="topMenu" class="nav pull-right">
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li><a href="{{ path('user_manager') }}">Users</a></li>
+                    {% if is_granted('ROLE_EDITOR') %}
+                        <li><a href="{{ path('user_manager') }}">Admin panel</a></li>
                     {% endif %}
-                    <li><a href="{{ path('article_index') }}">Blog</a></li>
-                    <li><a href="{{ path('category_index') }}">All Categories</a></li>
-                    <li><a href="{{ path('promotion_index') }}">All Promotion</a></li>
+                   
                     <li class=""><a href="#">Contact</a></li>
-                    <li class="">
-                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                            <a href="{{ path('logout') }}" ><span class="btn btn-large btn-success">Logout</span></a>
-                        {% else %}
-                            <a href="{{ path('login') }}" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a>
-                            <a href="{{ path('user_register') }}">Register</a>
 
-                        {% endif %}
-                    </li>
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        <li class=""><a href="{{ path('my_profile',{'id':app.user.id}) }}">My profile</a></li>
+                        <li class=""> <a href="{{ path('logout') }}" ><span class="btn btn-large btn-success">
+                                    Logout</span></a>
+                        </li>
+                    {% else %}
+                        <li class=""> <a href="{{ path('user_register') }}">Register</a></li>
+                        <li class=""> <a href="{{ path('login') }}" role="button" data-toggle="modal" style="padding-right:0"><span class="btn btn-large btn-success">Login</span></a></li>
+
+                    {% endif %}
+
                 </ul>
             </div>
         </div>
@@ -78,7 +91,9 @@
         <div class="row">
 
             {% block sidebar %}
-                
+               {{ render(controller(
+                   'ShopBundle:ProductCategory:index'
+               )) }}
             {% endblock %}
 
             {% block body %}
@@ -127,7 +142,14 @@
     </div><!-- Container End -->
 </div>
 <!-- Placed at the end of the document so the pages load faster ============================================= -->
+    {% block javascript %}
+        <script src="{{ asset('themes/js/jquery.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('themes/js/bootstrap.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('themes/js/google-code-prettify/prettify.js') }}"></script>
 
+        <script src="{{ asset('themes/js/bootshop.js') }}"></script>
+        <script src="{{ asset('themes/js/jquery.lightbox-0.5.js') }}"></script>
+    {% endblock %}
 <!-- Themes switcher section ============================================================================================= -->
 </body>
 </html>
