--- a/src/AppBundle/Resources/views/security/delete_user.html.twig
+++ b/src/AppBundle/Resources/views/security/delete_user.html.twig
@@ -1,11 +1,25 @@
 {% extends '@basic/base.html.twig' %}
 
+{% block sidebar %}
+
+{% endblock %}
+
 {% block body %}
-
-    {{ form_start(delete_form) }}
-
-    {{ form_widget(delete_form) }}
-
-    {{ form_end(delete_form) }}
+    <div class="span11">
+        {{ include('@Shop/Default/admin_menu.html.twig') }}
+        <ul class="breadcrumb">
+            <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+            <li class="active">Delete User</li>
+        </ul>
+        <h2>Delete user</h2>
+        <div class="well">
+            {{ form_start(delete_form) }}
+        
+                {{ form_widget(delete_form) }}
+            <a class="btn btn-large btn-default" href="{{ path('user_manager') }}">Cancel</a>
+            <input class="btn btn-large btn-danger" type="submit" value="Delete user !">
+            {{ form_end(delete_form) }}
+        </div>
+    </div>
 
 {% endblock %}
