--- a/src/AppBundle/Resources/views/security/edit_user.html.twig
+++ b/src/AppBundle/Resources/views/security/edit_user.html.twig
@@ -1,11 +1,25 @@
 {% extends '@basic/base.html.twig' %}
 
+{% block sidebar %}
+
+{% endblock %}
+
 {% block body %}
+    <div class="span11">
+        {{ include('@Shop/Default/admin_menu.html.twig') }}
+        <ul class="breadcrumb">
+            <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+            <li class="active">Edit user</li>
+        </ul>
+        <h2>Edit User</h2>
+        <div class="well">
+            {{ form_start(edit_form) }}
+                {{ form_widget(edit_form) }}
+            <a class="btn btn-large btn-default" href="{{ path('user_manager') }}">Cancel</a>
+            <input class="btn btn-large btn-warning" type="submit" value="Edit !">
+            {{ form_end(edit_form) }}
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-    {{ form_end(edit_form) }}
-
-    <a href="{{ path('user_manager') }}">&larr; Back to user list </a>
-
+        <a href="{{ path('user_manager') }}">&larr; Back to user list </a>
+        </div>
+    </div>
 {% endblock %}
