--- a/src/AppBundle/Resources/views/security/forgot_password.html.twig
+++ b/src/AppBundle/Resources/views/security/forgot_password.html.twig
@@ -1,7 +1,12 @@
 {% extends '@basic/base.html.twig' %}
 
 {% block body %}
+    <div class="span9">
+
     <h2>Forgot password</h2>
-    <p>Please insert your username and email !</p>
-    {{ form(form) }}
+        <div class="well">
+            <p>Please insert your username and email !</p>
+            {{ form(form) }}
+        </div>
+    </div>
 {% endblock %}
