--- a/src/ShopBundle/Resources/views/order/create_order.html.twig
+++ b/src/ShopBundle/Resources/views/order/create_order.html.twig
@@ -1,54 +1,61 @@
 {% extends '@App/base.html.twig' %}
 
+{% block sidebar %}
+
+{% endblock %}
+
 {% block body %}
-    <h1>Add order </h1>
-    {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <p>
-            If you do not have a registration, you can choose to create an account.<br>
-            Registration will give you some advantages when using the store. <br>
-            If you do not wish to choose continue without registration.
-        </p>
-    {% endif %}
-    {{ dump(order) }}
-    <div class="order">
-        <h2>Order details</h2>
-        <p>===========================================================</p>
-        {% for product in app.session.get('cart') %}
-            {% if product.id|length %}
-                <p>Product name :{{product.product.title }}
-                    <span><a href="{{ path('session_clear',{'id':product.id}) }}"> </a></span>
-                </p>
-                <p>Price: {{ product.price }}</p>
-                <p>Quantity: {{ product.quantity }}</p>
-                {% if product.promotion is not null %}
-                    <p>Discount : <strong>{{ product.promotion.discount }} %</strong>
-                {% endif %}
-                Product total :<strong> {{ product.product.subtotal|number_format(2,'.',' ') }}</strong>
-                </p>
-            {% endif %}
-            <p>========================================================</p>
-        {% endfor %}
-        <p>======================</p>
-        <p>Total: <strong>{{ app.session.get('total')|number_format(2,'.',' ') }}</strong> </p>
-        <p>======================</p>
-    </div>
-    <div class="order">
-        <h2>Order information</h2>
-        {{ form_start(form) }}
-
-        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-            {{ form_widget(form.firstName,{'attr':{'hidden':'hidden'}}) }}
-            {{ form_widget(form.lastName,{'attr':{'hidden':'hidden'}}) }}
+    <div class="span11">
+        <ul class="breadcrumb">
+            <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+            <li class="active">Add order</li>
+        </ul>
+        <h1>Add order </h1>
+        {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <p>
+                If you do not have a registration, you can choose to create an account.<br>
+                Registration will give you some advantages when using the store. <br>
+                If you do not wish to choose continue without registration.
+            </p>
         {% endif %}
+        <div class="order">
+            <h2>Order details</h2>
+            <hr class="soft"/>
+            {% for product in app.session.get('cart') %}
+                {% if product.id|length %}
+                    <p>Product name :{{product.product.title }}
+                        <span><a href="{{ path('session_clear',{'id':product.id}) }}"> </a></span>
+                    </p>
+                    <p>Price: {{ product.price }}</p>
+                    <p>Quantity: {{ product.quantity }}</p>
+                    {% if product.promotion is not null %}
+                        <p>Discount : <strong>{{ product.promotion.discount }} %</strong>
+                    {% endif %}
+                    Product total :<strong> {{ product.product.subtotal|number_format(2,'.',' ') }}</strong>
+                    </p>
+                {% endif %}
+                <hr class="soft"/>
+            {% endfor %}
+            <hr class="soft"/>
+            <p>Total: <strong>{{ app.session.get('total')|number_format(2,'.',' ') }}</strong> </p>
+            <hr class="soft"/>
+        </div>
+        <div class="order">
+            <h2>Order information</h2>
+            {{ form_start(form) }}
 
-        {{ form_end(form) }}
+
+
+            {{ form_end(form) }}
+        </div>
+
+        <style>
+            .order{
+                display: inline-block;
+                vertical-align: top;
+                padding-right:40px ;
+                width: 35%;
+            }
+        </style>
     </div>
-
-    <style>
-        .order{
-            display: inline-block;
-            vertical-align: top;
-
-        }
-    </style>
 {% endblock %}
