--- a/src/ShopBundle/Resources/views/order/order_details.html.twig
+++ b/src/ShopBundle/Resources/views/order/order_details.html.twig
@@ -1,24 +1,91 @@
 {% extends '@App/base.html.twig' %}
 
-{% block body %}
-
-    {{ dump(order) }}
-       <h1>Congratulations !</h1>
-    <p>
-        Your order has been processed successfully.
-        Our employee will contact you on your phone number to confirm. <br>
-        You will receive an email with the details of your order.
-    </p>
-
-    <h2>Product details</h2>
-        {% for product in order.productUsers %}
-           {{ dump(product) }}
-            <p>Product name : <strong>{{ product.product.title }}</strong></p>
-            <p>Product price : {{ product.price }} &euro;</p>
-            <p>Product quantity : {{ product.quantity }}</p>
-        {% endfor %}
-    
-    <h2>Order details</h2>
-    <p>{{ order.totalAmount  }}</p>
+{% block sidebar %}
 
 {% endblock %}
+{% block body %}
+<div class="span11">
+    <ul class="breadcrumb">
+        <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+        <li class="active">Order Detail</li>
+    </ul>
+       <h1>Congratulations !</h1>
+    <div class="well">
+        <p>
+            Your order has been processed successfully.
+            Our employee will contact you on your phone number to confirm. <br>
+            You will receive an email with the details of your order.
+        </p>
+    </div>
+
+    <h2>Order products</h2>
+    <div class="container">
+        <table class="table-hover">
+            <thead>
+                <tr>
+                    <th>Product name</th>
+                    <th>Product price</th>
+                    <th>Quantity</th>
+                </tr>
+            </thead>
+            <tbody>
+    {% if  order %}
+        {% for product in order.productUsers %}
+            <tr>
+                <td> <strong>{{ product.product.title }}</strong></td>
+                <td> {{ product.price }} &euro;</td>
+                <td> {{ product.quantity }}</td>
+            </tr>
+        {% endfor %}
+   
+            </tbody>
+        </table>
+    </div>
+
+    <h2>Order details</h2>
+    <div class="container">
+        <table class="table-hover" border="1" >
+            <thead>
+            <tr>
+                <th>Order Id</th>
+                <th>Username</th>
+                <th>Firs Name</th>
+                <th>Last Name</th>
+                <th>Ship City</th>
+                <th>Ship Address</th>
+                <th>Order Phone</th>
+                <th>Order Email</th>
+                <th>Order Date</th>
+                <th>Customer IP Address</th>
+                <th>Order Status</th>
+                <th>Order Total</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr >
+                <td>{{ order.id }}</td>
+                <td>{% if order.user %}{{ order.user.username }}{% endif %}</td>
+                <td>{{ order.firstName }}</td>
+                <td>{{ order.lastName }}</td>
+                <td>{{ order.shipCity }}</td>
+                <td>{{ order.shipAddress }}</td>
+                <td>{{ order.orderPhone }}</td>
+                <td>{{ order.orderEmail }}</td>
+                <td >{{ order.orderDate|date('Y-m-d H:i:s') }}</td>
+                <td>{{ order.clientIpAddress }}</td>
+                <td>{{ order.status }}</td>
+                <td>{{ order.totalAmount }} &euro;</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    {% endif %}
+</div>
+    <style>
+    td{
+        padding: 3px 15px;
+    }
+</style>
+{% endblock %}
+
+
