--- a/src/ShopBundle/Resources/views/productcategory/edit.html.twig
+++ b/src/ShopBundle/Resources/views/productcategory/edit.html.twig
@@ -1,21 +1,31 @@
 {% extends '@App/base.html.twig' %}
 
+ {% block sidebar %}
+
+ {% endblock %}
+
 {% block body %}
-    <h1>Productcategory edit</h1>
-
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('category_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
+<div class="span11">
+    <ul class="breadcrumb">
+        <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+        <li class="active">Category edit</li>
     </ul>
+    {{ include('@Shop/Default/admin_menu.html.twig') }}
+    <h1>Category edit</h1>
+    <div class="well">
+        {{ form_start(edit_form) }}
+            {{ form_widget(edit_form) }}
+            <a class="btn btn-large btn-default" href="#">Cancel</a>
+            <input class="btn btn-large btn-warning" type="submit" value="Edit !" />
+        {{ form_end(edit_form) }}
+
+        {{ form_start(delete_form) }}
+            <input class="btn btn-large btn-danger" type="submit" value="Delete !">
+        {{ form_end(delete_form) }}
+
+
+                <a href="{{ path('category_index') }}">Back to the list</a>
+
+    </div>
+</div>
 {% endblock %}
