--- a/src/ShopBundle/Resources/views/promotion/new.html.twig
+++ b/src/ShopBundle/Resources/views/promotion/new.html.twig
@@ -1,17 +1,30 @@
 {% extends '@App/base.html.twig' %}
 
-{% block body %}
-    <h1>Promotion creation</h1>
+{% block sidebar %}
 
+{% endblock %}
+
+{% block body %}
+<div class="span11">
+    <ul class="breadcrumb">
+        <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
+        <li class="active">Promotion List</li>
+    </ul>
+    {{ include('@Shop/Default/admin_menu.html.twig') }}
+
+    <h1>Create New Promotion</h1>
+
+    <div class="well">
     {% form_theme form with 'forms/customize_form.html.twig' %}
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input class="btn btn-success" type="submit" value="Create Promotion !" />
     {{ form_end(form) }}
-
+    </div>
     <ul>
         <li>
             <a href="{{ path('promotion_index') }}">Back to the list</a>
         </li>
     </ul>
+</div>
 {% endblock %}
